--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,18 @@ headsepline, % Uncomment to get a line under the header
 \addbibresource{example.bib} % The filename of the bibliography
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
+\usepackage{mathtools}
+\usepackage{amsfonts}
+\usepackage{todonotes}
+\usepackage{amsthm}
+\usepackage{amssymb}
+\usepackage{amsfonts}
+\usepackage{stmaryrd}
+
+
+\theoremstyle{definition}
+\newtheorem{definition}{Definition}[section]
+\newtheorem{remark}{Remark}[chapter]
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
@@ -68,15 +80,15 @@ headsepline, % Uncomment to get a line under the header
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Thesis Title} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Dr. James \textsc{Smith}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
+\thesistitle{System Transformations for Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\supervisor{Dr. Sudipta \textsc{Chattopadhyay}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{John \textsc{Smith}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
+\author{Eric G. \textsc{Rothstein Morris}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 \university	{SUTD}
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\pillar{Pillar} % Pillar
+\pillar{Information Systems Technology and Design (ISTD)} % Pillar
 
 \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
 \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
@@ -105,12 +117,12 @@ headsepline, % Uncomment to get a line under the header
 {\huge \bfseries \ttitle}\\[3cm] % Thesis title
 
 
-Submitted by\\[1cm]
+Submitted by\\[0.75cm]
 \authorname % Author name - remove the \href bracket to remove the link
 
 \vspace{4em}
 
-Thesis Advisor\\[1cm]
+Thesis Advisor\\[0.75cm]
 \supname % Supervisor name - remove the \href bracket to remove the link
 
 \vspace{4em}
@@ -301,6 +313,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 %\include{Chapters/Chapter3}
 %\include{Chapters/Chapter4}
 %\include{Chapters/Chapter5}
+\include{Chapters/Chapter6}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
