--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,8 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{stmaryrd}
+\usepackage{ mathrsfs }
+\usepackage{ upgreek }
 
 
 \theoremstyle{definition}
