Working on program repair

--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,7 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{stmaryrd}
 \usepackage{ mathrsfs }
 \usepackage{ upgreek }
+\usepackage{proof}
 
 
 \theoremstyle{definition}
