--- a/main.tex
+++ b/main.tex
@@ -59,11 +59,40 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{ mathrsfs }
 \usepackage{ upgreek }
 \usepackage{proof}
+\usepackage{mdsymbol}
+\usepackage{algorithmicx}
+%\usepackage{algorithmicx/algorithmicx}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\usepackage{tikz-cd}
 
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[section]
 \newtheorem{remark}{Remark}[chapter]
+
+
+\newcommand{\Monad}{{\mathbb{\MFunctor}}}
+\newcommand{\Functor}{F}
+\newcommand{\MFunctor}{T}
+
+%Notation for Sets of Elements
+\newcommand{\SomeSet}[1]{
+	{\ifthenelse{\equal{#1}{1}}
+		{{X}}
+		{\ifthenelse{\equal{#1}{2}}
+		{{Y}}
+		{\ifthenelse{\equal{#1}{3}}
+		{{Z}}
+		{{#1}}}}
+	}
+}
+\MakeRobust{\SomeSet}
+\newcommand*{\TheSet}{{\SomeSet{1}}}
+\newcommand{\AsSet}[1]{{{#1_\AsCategory{Set}}}}
+\newcommand*{\0}{{0_\AsCategory{Set}}}
+\newcommand*{\1}{{1_\AsCategory{Set}}}
+\newcommand{\FinitePowerset}[1]{{\mathcal{P}_\omega(#1)}}
 
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
@@ -83,7 +112,7 @@ headsepline, % Uncomment to get a line under the header
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{System Transformations for Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Latent Behaviour Analysis}% and its Applications to Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Dr. Sudipta \textsc{Chattopadhyay}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
@@ -311,6 +340,9 @@ The acknowledgments and the people to thank go here, don't forget to include you
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
+\include{Chapters/Introduction}
+\include{Chapters/Preliminaries}
+\include{Chapters/LatentBehaviours}
 \include{Chapters/Chapter1}
 %\include{Chapters/Chapter2}
 %\include{Chapters/Chapter3}
