i'm kinda happy with the description of strategies now. I'm very close to finishing it

--- a/main.tex
+++ b/main.tex
@@ -85,8 +85,9 @@ initial text=$ $, % sets the text that appears on the start arrow
 
 
 \newcommand{\Monad}{{\mathbb{\MFunctor}}}
-\newcommand{\Bialgebra}{{\mathbb{X}}}
+\newcommand{\TheCoalgebra}{{\mathbb{X}}}
 \newcommand{\Functor}{F}
+\newcommand{\DTS}{DTS}
 \newcommand{\MFunctor}{T}
 \newcommand{\TheLatentBehaviourOf}[2]{{\TheBehaviourOf{#1}^{#2}}}%{{{#1}_{beh}}}
 \newcommand{\TheLatentBehaviourOfIn}[3]{{{\llbracket#1\rrbracket}}^{#2}_{#3}}%{{{#1}_{beh}}}
@@ -114,6 +115,9 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newcommand{\AsSet}[1]{{{#1_\AsCategory{Set}}}}
 \newcommand*{\0}{{0_\AsCategory{Set}}}
 \newcommand*{\id}{{\texttt{id}}}
+\newcommand*{\fst}{{\texttt{fst}}}
+\newcommand*{\snd}{{\texttt{snd}}}
+\newcommand*{\supp}{{\texttt{supp}}}
 \newcommand*{\1}{{1_\AsCategory{Set}}}
 
 \newtheorem{example}{Example}[chapter]
