--- a/main.tex
+++ b/main.tex
@@ -83,6 +83,37 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newtheorem{proposition}{Proposition}[section]
 \newtheorem{remark}{Remark}[chapter]
 
+%CHAPTER INTRODUCTIOn
+\newcommand{\branch}[3]{\ensuremath{{#2}\ {+_{#1}}\ {#3}}}
+\newcommand{\iterate}[2]{\ensuremath{{#2}^{\left(#1\right)}}}
+\newcommand{\bexp}[0]{\ensuremath{\text{BExp}}}
+\newcommand{\gexp}[0]{\ensuremath{\text{Exp}}}
+\newcommand{\usg}[0]{\ensuremath{\text{u}}}
+\newcommand{\eval}[0]{\ensuremath{\mathtt{eval}}}
+\newcommand{\sat}[0]{\ensuremath{\mathtt{sat}}}
+\newcommand{\sg}[0]{\ensuremath{\text{s}}}
+\newcommand{\set}[1]{\ensuremath{\left\{#1\right\}}}
+\newcommand{\lbl}[0]{\ensuremath{\text{lbl}}}
+\newcommand{\Real}[0]{\ensuremath{\mathbb{R}}}
+\newcommand{\Nat}[0]{\ensuremath{\mathbb{N}}}
+\newcommand{\Bool}[0]{\ensuremath{\mathbb{B}}}
+\newcommand{\letter}[0]{\ensuremath{\left(\text{A-Z\ |\ a-z}\right)}}
+\newcommand{\Atom}[0]{\ensuremath{\text{At}}}
+\newcommand{\GuardedString}[0]{\ensuremath{\text{GS}}}
+\newcommand{\RC}[0]{\ensuremath{\text{RC}}}
+\newcommand{\Low}[0]{\ensuremath{\text{Low}}}
+\newcommand{\Variable}[0]{\ensuremath{\mathscr{V}}}
+\newcommand{\Integer}[0]{\ensuremath{\mathbb{Z}}}
+\newcommand{\alphanumeric}[0]{\ensuremath{\left(\text{A-Z\ |\ a-z\ |\ 0-9}\right)}}
+\newcommand{\alphanumericP}[0]{\ensuremath{\left(\text{A-Z\ |\ a-z\ |\ 0-9\ |\ .\ |\ \_\ |\ \$}\right)}}
+\newcommand{\semantics}[1]{\ensuremath{\llbracket #1\rrbracket}}
+\newcommand{\valuation}[0]{\ensuremath{\Gamma}}
+\newcolumntype{L}{>{$}l<{$}} % math-mode version of "l" column type
+\newcolumntype{R}{>{$}r<{$}} % math-mode version of "r" column type
+\newcolumntype{C}{>{$}c<{$}} % math-mode version of "c" column type
+%\newcommand{\hourglass}[0]{}%{\LARGE\fontspec{Cambria}^^^^231b}
+\newcommand{\timeequiv}[0]{\equiv_{\hourglass}}
+%END CHAPTER INTRO
 
 \newcommand{\Monad}{{\mathbb{\MFunctor}}}
 \newcommand{\TheCoalgebra}{{\mathbb{X}}}
@@ -369,15 +400,17 @@ The acknowledgments and the people to thank go here, don't forget to include you
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-\include{Chapters/Introduction}
+%\include{Chapters/Introduction}
+
 \include{Chapters/Preliminaries}
 \include{Chapters/LatentBehaviours}
-\include{Chapters/Chapter1}
+%\include{Chapters/QuickCompile}
+%\include{Chapters/Chapter1}
 %\include{Chapters/Chapter2}
 %\include{Chapters/Chapter3}
 %\include{Chapters/Chapter4}
 %\include{Chapters/Chapter5}
-\include{Chapters/Chapter6}
+%\include{Chapters/Chapter6}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
