--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 % Sunil Patel (http://www.sunilpatel.co.uk/thesis-template/)
 %
 %
-% Template license:
+% Template license: 
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -199,27 +199,72 @@ initial text=$ $, % sets the text that appears on the start arrow
 \begin{titlepage}
 \begin{center}
 
-\begin{figure}
+\begin{figure}[t]
 \centering
-\includegraphics[width=0.5\textwidth]{Figures/SUTD}
+\includegraphics[width=0.5\textwidth]{Figures/SUTD}\\
+\vspace{1cm}
+% \end{figure}
+% \hfill\break\\[1cm]%[2.3cm]
+% \begin{figure}[!h]
+	\centering
+    \begin{tikzcd}[column sep=1.75cm, row sep=1cm]
+        & 
+        &\sigma F
+            \arrow[dr,swap,"\Delta^m_b"']
+        &
+        \\ 
+        \sigma F
+            %\arrow[dd, "\simeq","\omega"'] 
+            \arrow[dd, "\simeq"', "!"]
+            %\arrow[d, "c"] 
+        & X  
+            \arrow[l, dotted, swap,"\TheBehaviourOf{\cdot}_{c}"]
+            \arrow[dd,"c"] 
+        & X
+            \arrow[l, swap, "m"]
+            \arrow[u, "\TheBehaviourOf{\cdot}_{c}"]
+            \arrow[r,dotted, swap, "\TheBehaviourOf{\cdot}_{b\circ c\circ m}"]
+        &\sigma F 
+            %\arrow[dd, "\simeq","\omega"']
+            \arrow[dd, "!"]
+            \arrow[dr, "\textbf{id}"]
+        \\
+        &&&&\sigma(F)
+        \\
+        F(\sigma F)
+            %
+        &F(X)     
+            \arrow[l, dotted, "F(\TheBehaviourOf{\cdot}_{c})"]
+            \arrow[r, swap, "b"]
+        &F(X)
+            \arrow[d, swap, "F(\TheBehaviourOf{\cdot}_{c})"]
+            \arrow[r, dotted, "F(\TheBehaviourOf{\cdot}_{b\circ c\circ m})"] 
+        &
+        F(\sigma F)
+            %\arrow[ur, swap, "\omega^{-1}"]
+            \arrow[ur, swap, "!^{-1}"]
+        \\
+        &
+        &F(\sigma F)
+            \arrow[ru, swap, "F(\Delta^m_b)"]
+        &
+    \end{tikzcd}
 \end{figure}
+\break
+%\hfill\break\\[0cm]%[2.3cm]
+{\huge \bfseries \ttitle}\\[1cm]%[3cm] % Thesis title
 
- \hfill\break\\[2.3cm]
-
-{\huge \bfseries \ttitle}\\[3cm] % Thesis title
-
-
-Submitted by\\[0.75cm]
+Submitted by\\[0.5cm]%[0.75cm]
 \authorname % Author name - remove the \href bracket to remove the link
 
-\vspace{4em}
+\vspace{2em}%{4em}
 
-Thesis Advisor\\[0.75cm]
+Thesis Advisor\\[0.5cm]%[0.75cm]
 \supname % Supervisor name - remove the \href bracket to remove the link
 
-\vspace{4em}
+\vspace{2em}%{4em}
 
-\pillarname\\[1.5cm] % Research group name and department name
+\pillarname\\[1cm]%[1.5cm] % Research group name and department name
 
 \large{A thesis submitted to the Singapore University of Technology and Design in fulfillment of the requirement for the degree of \degreename}\\[1cm] % University requirement text
 
@@ -402,10 +447,10 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 %\include{Chapters/Introduction}
 
-\include{Chapters/Preliminaries}
-\include{Chapters/LatentBehaviours}
-%\include{Chapters/QuickCompile}
-%\include{Chapters/Chapter1}
+%\include{Chapters/Preliminaries}
+%\include{Chapters/LatentBehaviours}
+\include{Chapters/QuickCompile}
+%\include{Chapters/Chapter1} 
 %\include{Chapters/Chapter2}
 %\include{Chapters/Chapter3}
 %\include{Chapters/Chapter4}
