defined sum and multiplication of attacks

--- a/main.tex
+++ b/main.tex
@@ -248,10 +248,10 @@ initial text=$ $, % sets the text that appears on the start arrow
         &F(\sigma F)
             \arrow[ru, swap, "F(\Delta^m_b)"]
         &
-    \end{tikzcd}
+    \end{tikzcd} 
 \end{figure}
 \break
-%\hfill\break\\[0cm]%[2.3cm]
+\hfill\break\\[-0.5cm]%[2.3cm]
 {\huge \bfseries \ttitle}\\[1cm]%[3cm] % Thesis title
 
 Submitted by\\[0.5cm]%[0.75cm]
