--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SUTD Masters/Doctoral Thesis
-% LaTeX Template
+% LaTeX Template 
 % Version 1.0 (29/08/16)
 %
 % Adapted to SUTD requirements by Martin Ochoa
@@ -14,13 +14,13 @@
 % which in turn was based on a template by:
 % Steve Gunn (http://users.ecs.soton.ac.uk/srg/softwaretools/document/templates/)
 % Sunil Patel (http://www.sunilpatel.co.uk/thesis-template/)
-%
+% 
 %
 % Template license: 
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
+% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+ 
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -34,7 +34,7 @@ singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespac
 %nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 %liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
 %toctotoc, % Uncomment to add the main table of contents to the table of contents
-%parskip, % Uncomment to add space between paragraphs
+parskip, % Uncomment to add space between paragraphs
 %nohyperref, % Uncomment to not load the hyperref package
 headsepline, % Uncomment to get a line under the header
 ]{MastersDoctoralThesis} % The class file specifying the document structure
@@ -82,7 +82,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newtheorem{definition}{Definition}[section]
 \newtheorem{proposition}{Proposition}[section]
 \newtheorem{remark}{Remark}[chapter]
-
+ 
 %CHAPTER INTRODUCTIOn
 \newcommand{\branch}[3]{\ensuremath{{#2}\ {+_{#1}}\ {#3}}}
 \newcommand{\iterate}[2]{\ensuremath{{#2}^{\left(#1\right)}}}
@@ -116,20 +116,146 @@ initial text=$ $, % sets the text that appears on the start arrow
 %END CHAPTER INTRO
 
 \newcommand{\Monad}{{\mathbb{\MFunctor}}}
-\newcommand{\TheCoalgebra}{{\mathbb{X}}}
 \newcommand{\Functor}{F}
 \newcommand{\DTS}{DTS}
 \newcommand{\MFunctor}{T}
 \newcommand{\TheLatentBehaviourOf}[2]{{\TheBehaviourOf{#1}^{#2}}}%{{{#1}_{beh}}}
 \newcommand{\TheLatentBehaviourOfIn}[3]{{{\llbracket#1\rrbracket}}_{({#2},{#3})}}%{{{#1}_{beh}}}
 \newcommand{\TheBehavioursOf}[1]{{{\llbracket\TheFinalCoalgebraOf{#1}\rrbracket}}}
-\newcommand{\TheBehaviourOf}[1]{{{\llbracket#1\rrbracket}}}%{{{#1}_{beh}}}
+%\newcommand{\TheBehaviourOf}[1]{{{\llbracket#1\rrbracket}}}%{{{#1}_{beh}}}
 \newcommand{\TheBehaviourOfIn}[2]{{{\llbracket#1\rrbracket}}_{#2}}%{{{#1}_{beh}}}
-\newcommand{\ThePowersetOf}[1]{{\Powerset\!\left({#1}\right)}}
-\newcommand{\TheFinitePowersetOf}[1]{{\FinitePowerset\left(#1\right)}}
+\newcommand*{\supp}{{\texttt{supp}}}
+%\newcommand{\Powerset}{{\mathscr{P}}}
+%\newcommand{\FinitePowerset}{{\Powerset_\omega}}
+%\MakeRobust{\Haskell}
+%Notation for Sets of Elements
+% \newcommand{\SomeSet}[1]{
+% 	{\ifthenelse{\equal{#1}{1}}
+% 		{{X}}
+% 		{\ifthenelse{\equal{#1}{2}}
+% 		{{Y}}
+% 		{\ifthenelse{\equal{#1}{3}}
+% 		{{Z}}
+% 		{{#1}}}}
+% 	}
+% }
+% \MakeRobust{\SomeSet}
+% \newcommand*{\TheSet}{{\SomeSet{1}}}
+% \newcommand{\AsSet}[1]{{{#1_\AsCategory{Set}}}}
+% \newcommand*{\0}{{0_\AsCategory{Set}}}
+% \newcommand*{\1}{{1_\AsCategory{Set}}}
+
+
+%-----Commands for annotation
+\newcommand{\marker}[1]{
+ \noindent{\newline \color{green}
+ \framebox[\textwidth][t]{%
+  \parbox[t]{0.9\textwidth}{\textcolor{green}{MARKER: #1}}
+}}}
+
+\newcommand{\review}[1]{
+ \noindent{\newline \color{blue}
+ \framebox[\textwidth][t]{%
+  \parbox[t]{0.9\textwidth}{\textcolor{blue}{Note to Reviewers: #1}}
+}}}
+
+%Commands for...
+%COMMANDS BY ERIC
+
+
+
+\newcommand{\nat}{{\omega}}
+\newcommand{\head}{{\texttt{head}}}
+\newcommand{\forget}{{\texttt{forget}}}
+\newcommand{\tail}{{\texttt{tail}}}
+\newcommand{\unde}{{\texttt{undef}}}
+\newcommand{\has}{{\mathbf{has}}}
+\newcommand{\out}{{\mathbf{output}}}
+\newcommand{\add}{{\mathbf{add}}}
+\newcommand{\del}{{\mathbf{del}}}
+\newcommand{\ins}{{\mathbf{instruction}}}
+\newcommand{\bool}{{\mathbb{B}}}%{\mathbf{\mathtt{bool}}}%
+\newcommand{\boolUndef}{\{\true,\false\}\sqcup\{\unde\}}%{{\mathbb{B}}}
+\newcommand{\xeq}[1]{\ensuremath{\stackrel{#1}{=}}}
+\newcommand{\xneq}[1]{\ensuremath{\stackrel{#1}{\neq}}}
+\newcommand{\ofsigma}[1]{{\mathcal{#1}(\Sigma)}}
+\newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
+\newcommand{\Lift}{\AsFunctor{Lift}}
+\newcommand{\Trans}{\AsFunctor{Tr}}
+\newcommand{\Places}{\AsFunctor{Pl}}
+\newcommand{\Slift}{\AsFunctor{S}}%\mathpzc{abcdefghijklmnopqrstuvwxyz}}
+%\newcommand{\slift}{\mathcal{S}\AsCoalgebra{habbat}\mathcal{L}\AsCoalgebra{ift}}
+\newcommand{\AsRule}[1]{{{\textsc{#1}}}}
+\MakeRobust{\AsRule}
+\newcommand{\AsFunction}[1]{{\textsc{#1}}}
+
+
+
+%ASMNotation
+\newcommand{\true}{\mathtt{\texttt{true}}}
+\newcommand{\false}{\mathtt{\texttt{false}}}
+\newcommand{\fst}{\mathtt{\texttt{fst}}}
+\newcommand{\snd}{\mathtt{\texttt{snd}}}
+\newcommand{\id}{{\texttt{id}}}
+\newcommand{\Root}{\mathtt{\texttt{root}}}
+\newcommand{\Observation}{\mathtt{\texttt{obs}}}
+\newcommand{\Configuration}{\mathtt{\texttt{conf}}}
+\newcommand{\Exec}{\mathtt{\texttt{run}}}
+\newcommand{\Pack}{\mathtt{\texttt{pack}}}
 \newcommand{\Powerset}{{\mathscr{P}}}
 \newcommand{\FinitePowerset}{{\Powerset_\omega}}
-%\MakeRobust{\Haskell}
+\newcommand{\ASM}{\AsFunctor{ASM}}
+\newcommand{\SeqRec}{\AsFunctor{SeqRec}}
+\newcommand*{\Automata}{\AsFunctor{Au}}
+\newcommand{\TheAlgorithm}{\AsFunctor{A}}
+\newcommand{\TheTrace}{\tau}
+\newcommand{\AbstractStates}{\AsFunctor{AbstractStates}}
+\newcommand{\TheASM}{\AsFunctor{M}}
+\newcommand{\AbstractStateCategory}{\AsCategory{State}}
+\newcommand{\TheSignature}{\Sigma}
+%\newcommand{\TheVocabulary}{\Pi}
+\newcommand{\TheSetOfVariables}{\AsFunctor{V}}
+\newcommand{\TheSetOfRuleInstances}{\mathbf{R}}
+\newcommand{\TheRuleInstance}{\MakeLowercase{\TheSetOfRuleInstances}}
+\newcommand{\BisimilarityIn}[1]{\sim_{#1}}
+\newcommand{\Forget}{\mathtt{forget}}
+\newcommand{\Learn}{\mathtt{learn}}
+\newcommand{\Force}{\mathtt{force}}
+\newcommand{\Causal}{\mathtt{causal}}
+\newcommand{\TheRule}{r}
+\newcommand{\TheVariable}{\MakeLowercase{\TheSetOfVariables}}
+\newcommand{\TheSuperuniverse}{\mathcal{S}}
+\newcommand{\TheLanguage}{\mathcal{L}}
+\newcommand{\TheValue}{s}
+\newcommand{\formula}[3]{\llbracket #1 \rrbracket^\AsAlgebra{#2}_#3}
+\newcommand{\TheSetOfLocations}{\mathbf{L}}
+\newcommand{\TheSetOfUpdates}{\mathbf{U}}
+\newcommand{\TheSubsetOfUpdates}{U}
+\newcommand{\ASMRules}{\mathbf{\TheSetOfRules}}
+\newcommand{\TheLocation}{\MakeLowercase{\TheSetOfLocations}}
+\newcommand{\TheRelationLocation}{\MakeLowercase{\TheSetOfRelationLocations}}
+\newcommand{\TransitionRule}{\MakeLowercase{\ASMRules}}
+\newcommand{\TheSetOfTerms}{\mathbf{T}}
+\newcommand{\TheSetOfFormulas}{\mathbf{F}}
+\newcommand{\TheTerm}{t}
+\newcommand{\TheVariableAssignment}{\zeta}
+
+
+%Notation for Elements
+\newcommand{\SomeElement}[1]{
+	{
+	\ifthenelse{\equal{#1}{1}}
+		{{x}}
+		{\ifthenelse{\equal{#1}{2}}
+		{{y}}
+		{\ifthenelse{\equal{#1}{3}}
+		{{z}}
+		{{{#1}}}}}
+	}
+}
+\MakeRobust{\SomeElement}
+\newcommand{\TheElement}{{\SomeElement{1}}}
+
 %Notation for Sets of Elements
 \newcommand{\SomeSet}[1]{
 	{\ifthenelse{\equal{#1}{1}}
@@ -142,14 +268,463 @@ initial text=$ $, % sets the text that appears on the start arrow
 	}
 }
 \MakeRobust{\SomeSet}
-\newcommand*{\TheSet}{{\SomeSet{1}}}
-\newcommand{\AsSet}[1]{{{#1_\AsCategory{Set}}}}
-\newcommand*{\0}{{0_\AsCategory{Set}}}
-\newcommand*{\id}{{\texttt{id}}}
-\newcommand*{\fst}{{\texttt{fst}}}
-\newcommand*{\snd}{{\texttt{snd}}}
-\newcommand*{\supp}{{\texttt{supp}}}
-\newcommand*{\1}{{1_\AsCategory{Set}}}
+\newcommand{\TheCategoryOfSets}{{\AsCategory{Set}}}
+\newcommand{\TheSet}{{\SomeSet{1}}}
+\newcommand{\AsSet}[1]{{{#1_\TheCategoryOfSets}}}
+\newcommand{\0}{{0_\TheCategoryOfSets}}
+\newcommand{\1}{{1_\TheCategoryOfSets}}
+
+\newcommand{\ThePowersetOf}[1]{{\Powerset\!\left({#1}\right)}}
+\newcommand{\TheFinitePowersetOf}[1]{{\FinitePowerset\left(#1\right)}}
+
+%Notation for Predicates
+\newcommand{\SomePredicate}[1]{
+	{\ifthenelse{\equal{#1}{1}}
+		{{\AsRule{P}}}
+		{\ifthenelse{\equal{#1}{2}}
+		{{\AsRule{Q}}}
+		{\ifthenelse{\equal{#1}{3}}
+		{{\AsRule{R}}}
+		{\AsRule{#1}}}}
+	}
+}
+\MakeRobust{\SomePredicate}
+\newcommand{\ThePredicate}{{\SomePredicate{1}}}
+\newcommand{\TheProperty}{\ThePredicate}
+\newcommand{\SomeProperty}[1]{\SomePredicate{#1}}
+\newcommand{\AsPredicate}[1]{{{#1_\AsCategory{Pred}}}}
+\newcommand{\ThePredicatesOf}[1]{{\mathscr{P}_{#1}}}
+
+
+%Notation for Relations
+\newcommand{\SomeRelation}[1]{
+	{\ifthenelse{\equal{#1}{1}}
+		{{R}}
+		{\ifthenelse{\equal{#1}{2}}
+		{{S}}
+		{\ifthenelse{\equal{#1}{3}}
+		{{T}}
+		{{#1}}}}
+	}
+}
+\MakeRobust{\SomeRelation}
+\newcommand{\TheRelation}{{\SomeRelation{1}}}
+\newcommand{\AsRelation}[1]{{{#1_\AsCategory{Rel}}}}
+
+%Notation for Functions
+\newcommand{\SomeFunction}[1]{
+	{\ifthenelse{\equal{#1}{1}}
+		{f}
+		{\ifthenelse{\equal{#1}{2}}
+		{g}
+		{\ifthenelse{\equal{#1}{3}}
+		{h}
+		{{#1}}}}
+	}
+}
+\MakeRobust{\SomeFunction}
+\newcommand{\TheFunction}{\SomeFunction{1}}
+\newcommand{\TheHomomorphism}{{\SomeFunction{3}}}
+\newcommand{\ProjectionFunction}{\pi}
+\newcommand{\InjectionFunction}{\kappa}
+
+%Notation for Categories
+\newcommand{\SomeCategory}[1]{
+	{\ifthenelse{\equal{#1}{1}}
+		{{\mathbf{C}}}
+		{\ifthenelse{\equal{#1}{2}}
+		{{\mathbf{D}}}
+		{\ifthenelse{\equal{#1}{3}}
+		{{\mathbf{E}}}
+		{{\mathbf{#1}}}}}
+	}
+}
+\MakeRobust{\SomeCategory}
+\newcommand{\TheCategory}{{\SomeCategory{1}}}
+\newcommand{\AsCategory}[1]{{\SomeCategory{#1}}}
+
+%Notation for Functors
+\newcommand{\AsFunctor}[1]{\mathpzc{#1}} 
+\newcommand{\SomeFunctor}[1]{
+	{
+	\ifthenelse{\equal{#1}{1}}
+		{\AsFunctor{F}}
+		{\ifthenelse{\equal{#1}{2}}
+		{\AsFunctor{G}}
+		{\ifthenelse{\equal{#1}{3}}
+		{\AsFunctor{H}}
+		{\AsFunctor{{#1}}}}}
+	}
+}
+\MakeRobust{\SomeFunctor}
+\newcommand{\TheFunctor}{{\SomeFunctor{1}}}
+\newcommand{\Moore}{\AsFunctor{Au}}
+\newcommand{\Mealy}{\AsFunctor{Me}}
+
+%Notation for Algebras
+\newcommand{\AsAlgebra}[1]{
+	{\mathfrak{{#1}}}
+}
+\newcommand{\SomeAlgebra}[1]
+{
+	{\ifthenelse{\equal{#1}{1}}
+	{\AsAlgebra{A}}
+	{\ifthenelse{\equal{#1}{2}}
+		{\AsAlgebra{B}}
+		{\ifthenelse{\equal{#1}{3}}
+			{\AsAlgebra{C}}
+			{\PackageWarning{Preamble}{non-standard algebra symbol}#1}
+		}
+	}
+	}
+}
+\MakeRobust{\SomeAlgebra}
+\newcommand{\TheAlgebra}{{\SomeAlgebra{1}}}
+\newcommand{\TheInitialAlgebraOf}[1]{{{0}_{#1}}}
+
+
+%Notation for Coalgebras
+\newcommand{\AsCoalgebra}[1]{
+	{\mathbb{{#1}}}
+}
+\newcommand{\SomeCoalgebra}[1]{
+	{\AsCoalgebra{\MakeUppercase{\SomeSet{#1}}}}
+}
+\MakeRobust{\SomeCoalgebra}
+\newcommand{\TheCoalgebra}{{\SomeCoalgebra{1}}}
+\newcommand{\TheFinalCoalgebraOf}[1]{{{1}_{#1}}}
+
+%Notation for Inputs %\PackageError{Preamble}{non-standard input symbol} //Use \PackageWarning if you want...
+\newcommand{\SomeInput}[1]
+{
+	{\ifthenelse{\equal{#1}{1}} 
+	{i}
+	{\ifthenelse{\equal{#1}{2}}
+		{j}
+		{\ifthenelse{\equal{#1}{3}}
+			{k}
+			{\PackageWarning{Preamble}{non-standard input symbol}#1}
+		}
+	}
+	}
+}
+\MakeRobust{\SomeInput}
+\newcommand{\TheInput}{{\SomeInput{1}}}
+\newcommand{\TheHighInput}{\SomeInput{h}} 
+\newcommand{\TheLowInput}{\SomeInput{l}} 
+
+%Notation for Sets of Inputs
+\newcommand{\SomeSetOfInputs}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{A}
+	{\ifthenelse{\equal{#1}{2}}
+		{B}
+		{\ifthenelse{\equal{#1}{3}}
+			{C}
+			{\PackageWarning{Preamble}{non-standard set of inputs symbol}#1}
+		}
+	}
+}
+\MakeRobust{\SomeSetOfInputs}
+\newcommand{\TheSetOfInputs}{I}
+\newcommand{\TheSetOfModes}{M}
+\newcommand{\TheSetOfHighInputs}{\SomeSetOfInputs{H}}
+\newcommand{\TheSetOfLowInputs}{\SomeSetOfInputs{L}}
+\newcommand{\TheSemilatticeOfInputs}{{\AsCoalgebra{\TheSetOfInputs}}}
+
+%Notation for Input Sequences
+\newcommand{\SomeSequenceOfInputs}[1]{
+{
+	\ifthenelse{\equal{#1}{1}}
+	{w}
+	{\ifthenelse{\equal{#1}{2}}
+		{u}
+		{\ifthenelse{\equal{#1}{3}}
+			{v}
+			{\PackageWarning{Preamble}{non-standard sequence of inputs symbol}#1}
+		}
+	}
+}
+}
+\MakeRobust{\SomeSequenceOfInputs}
+\newcommand{\TheSequenceOfInputs}{{\SomeSequenceOfInputs{1}}}
+\newcommand{\TheSequenceOfHighInputs}{\SomeSequenceOfInputs{\pi}}
+\newcommand{\TheSequenceOfLowInputs}{\SomeSequenceOfInputs{\lambda}}
+\newcommand{\SomeInputSequence}[1]{\SomeSequenceOfInputs{#1}}
+\newcommand{\TheInputSequence}{\TheSequenceOfInputs}
+
+%Notation for Sets of Input Sequences
+\newcommand{\SomeSetOfSequencesOfInputs}[1]{\SomeSetOfInputs{#1}^{*}}
+\MakeRobust{\SomeSetOfSequencesOfInputs}
+\newcommand{\TheSetOfSequencesOfInputs}{{\SomeSetOfSequencesOfInputs{1}}}
+\newcommand{\TheSetOfSequencesOfHighInputs}{{\SomeSetOfSequencesOfInputs{H}}}
+\newcommand{\TheSetOfSequencesOfLowInputs}{{\SomeSetOfSequencesOfInputs{L}}}
+\newcommand{\TheSetOfFiniteInputSequences}{\TheSetOfSequencesOfInputs}
+\newcommand{\TheSetOfHighInputSequences}{\TheSetOfSequencesOfHighInputs}
+\newcommand{\TheSetOfLowInputSequences}{\TheSetOfSequencesOfLowInputs}
+\newcommand{\SomeSetOfInputSequences}[1]{\SomeSetOfSequencesOfInputs{#1}}
+
+%Notation for Input Streams
+\newcommand{\SomeStreamOfInputs}[1]{
+	\ifthenelse{\equal{#1}{1}}
+		{\sigma}
+		{\ifthenelse{\equal{#1}{2}}
+		{\tau}
+		{\ifthenelse{\equal{#1}{3}}
+		{\rho}
+		{{#1}}}}
+	}
+\MakeRobust{\SomeStreamOfInputs}
+\newcommand{\TheStreamOfInputs}{{\SomeStreamOfInputs{1}}}
+\newcommand{\TheInputStream}{\TheStreamOfInputs}
+\newcommand{\SomeInputStream}[1]{\SomeStreamOfInputs{#1}}
+
+%Notation for Sets of Input Streams
+\newcommand{\SomeSetOfStreamsOfInputs}[1]{\SomeSetOfInputs{#1}^{\nat}}
+\MakeRobust{\SomeSetOfStreamsOfInputs}
+\newcommand{\TheSetOfStreamsOfInputs}{{\SomeSetOfStreamsOfInputs{1}}}
+\newcommand{\TheSetOfStreamsOfHighInputs}{{\SomeSetOfStreamsOfInputs{H}}}
+\newcommand{\TheSetOfStreamsOfLowInputs}{{\SomeSetOfStreamsOfInputs{L}}}
+\newcommand{\TheSetOfInputStreams}{\TheSetOfStreamsOfInputs}
+\newcommand{\TheSetOfHighInputStreams}{\TheSetOfStreamsOfHighInputs}
+\newcommand{\TheSetOfLowInputStreams}{\TheSetOfStreamsOfLowInputs}
+\newcommand{\SomeSetOfInputStreams}[1]{\SomeSetOfStreamsOfInputs{#1}}
+
+%Notation for Outputs 
+\newcommand{\SomeOutput}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{o}
+	{\ifthenelse{\equal{#1}{2}}
+		{p}
+		{\ifthenelse{\equal{#1}{3}}
+			{q}
+			{\PackageWarning{Preamble}{non-standard output symbol}#1}
+		}
+	}
+}
+\MakeRobust{\SomeOutput}
+\newcommand{\TheOutput}{\SomeOutput{1}} 
+\newcommand{\TheHighOutput}{\SomeOutput{h}} 
+\newcommand{\TheLowOutput}{\SomeOutput{l}} 
+
+%Notation for Sets of Outputs
+\newcommand{\SomeSetOfOutputs}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{O}
+	{\ifthenelse{\equal{#1}{2}}
+		{P}
+		{\ifthenelse{\equal{#1}{3}}
+			{Q}
+			{\PackageWarning{Preamble}{non-standard set of outputs symbol}#1}
+		}
+	}
+}
+\MakeRobust{\SomeSetOfOutputs}
+\newcommand{\TheSetOfOutputs}{{\SomeSetOfOutputs{1}}}
+\newcommand{\TheSetOfHighOutputs}{\SomeSetOfOutputs{H}}
+\newcommand{\TheSetOfLowOutputs}{\SomeSetOfOutputs{L}}
+\newcommand{\TheSemilatticeOfOutputs}{{\AsCoalgebra{\TheSetOfOutputs}}}
+
+%Notation for Output Sequences
+\newcommand{\SomeSequenceOfOutputs}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{\underline{w}}
+	{\ifthenelse{\equal{#1}{2}}
+		{\underline{u}}
+		{\ifthenelse{\equal{#1}{3}}
+			{\underline{v}}
+			{\PackageWarning{Preamble}{non-standard sequence of outputs symbol} \underline{#1}}
+		}
+	}
+}
+\MakeRobust{\SomeSequenceOfOutputs}
+\newcommand{\TheSequenceOfOutputs}{\SomeSequenceOfOutputs{1}}
+\newcommand{\TheSequenceOfHighOutputs}{\SomeSequenceOfOutputs{\pi}}
+\newcommand{\TheSequenceOfLowOutputs}{\SomeSequenceOfOutputs{\lambda}}
+\newcommand{\SomeOutputSequence}[1]{\SomeSequenceOfOutputs{#1}}
+
+
+%Notation for Sets of Output Sequences
+\newcommand{\SomeSetOfSequencesOfOutputs}[1]{\SomeSetOfOutputs{#1}^{*}}
+\MakeRobust{\SomeSetOfSequencesOfOutputs}
+\newcommand{\TheSetOfSequencesOfOutputs}{{\SomeSetOfSequencesOfOutputs{1}}}
+\newcommand{\TheSetOfOutputSequences}{\TheSetOfSequencesOfOutputs}
+\newcommand{\TheSetOfSequencesOfHighOutputs}{{\SomeSetOfSequencesOfOutputs{\underline{H}}}}
+\newcommand{\TheSetOfSequencesOfLowOutputs}{{\SomeSetOfSequencesOfOutputs{\underline{L}}}}
+\newcommand{\TheSetOfHighOutputSequences}{\TheSetOfSequencesOfHighOutputs}
+\newcommand{\TheSetOfLowOutputSequences}{\TheSetOfSequencesOfLowOutputs}
+
+%Notation for Exceptions 
+\newcommand{\SomeException}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{e}
+	{\ifthenelse{\equal{#1}{2}}
+		{d}
+		{\ifthenelse{\equal{#1}{3}}
+			{c}
+			{\PackageWarning{Preamble}{non-standard Exception symbol}#1}
+		}
+	}
+}
+\MakeRobust{\SomeException}
+\newcommand{\TheException}{\SomeException{1}} 
+\newcommand{\TheHighException}{\SomeException{h}} 
+\newcommand{\TheLowException}{\SomeException{l}} 
+
+%Notation for Sets of Exceptions
+\newcommand{\SomeSetOfExceptions}[1]
+{
+	\ifthenelse{\equal{#1}{1}}
+	{E}
+	{\ifthenelse{\equal{#1}{2}}
+		{F}
+		{\ifthenelse{\equal{#1}{3}}
+			{G}
+			{\PackageWarning{Preamble}{non-standard set of exceptions symbol}#1}
+		}
+	}
+}
+\MakeRobust{\SomeSetOfExceptions}
+\newcommand{\TheSetOfExceptions}{{\SomeSetOfExceptions{1}}}
+\newcommand{\TheSemilatticeOfExceptions}{{\AsCoalgebra{\TheSetOfExceptions}}}
+
+
+%Notation for Semirings
+\newcommand{\AsSemiring}[1]{\AsCoalgebra{#1}}
+\newcommand{\SomeSemiring}[1]{\AsSemiring{\MakeUppercase{\SomeSet{#1}}}}
+\MakeRobust{\SomeSemiring}
+\newcommand{\TheSemiring}{\SomeSemiring{1}}
+\newcommand{\TheRingOfIntegers}{{\AsSemiring{Z}}}
+\newcommand{\Addition}{+}
+\newcommand{\Multiplication}{\times}
+\newcommand{\Zero}{0}
+\newcommand{\One}{1}
+\newcommand{\Undef}{\perp}
+
+%Notation for FPS
+\newcommand{\SomeFPS}[1]{
+	\ifthenelse{\equal{#1}{1}}
+		{\sigma}
+		{\ifthenelse{\equal{#1}{2}}
+		{\gamma}
+		{\ifthenelse{\equal{#1}{3}}
+		{\rho}
+		{{#1}}}}
+	}
+\MakeRobust{\SomeFPS}
+\newcommand{\TheFPS}{\SomeFPS{1}}
+\newcommand{\TheFPSSemiring}{\AsSemiring{F}}
+\newcommand{\FPS}{{\textsc{fps}}}
+
+%Notation for Behaviours
+\newcommand{\SomeBehaviour}[1]{{\SomeFPS{#1}}}
+\MakeRobust{\SomeBehaviour}
+\newcommand{\TheBehaviour}{{\SomeBehaviour{1}}}
+\newcommand{\TheBehaviourOf}[1]{{{\llbracket#1\rrbracket}}}%{{{#1}_{beh}}}
+
+
+%Notation for Sequences
+\newcommand{\lseq}{\left<}
+\newcommand{\rseq}{\right>}
+\newcommand{\AsSequence}[1]{{{\left<#1\right>}}}
+\newcommand{\AsTuple}[1]{{\AsSequence{#1}}}
+\newcommand{\AsPair}[1]{{\AsTuple{#1}}}
+
+%Notation for IMs
+\newcommand{\IM}{\AsFunctor{IM}}
+\newcommand{\Countable}{\omega}%\mathbb{N}}
+\newcommand{\Indexes}{V}%\mathbb{N}}
+\newcommand{\SomeIndexes}{I}
+\newcommand{\Index}{\MakeLowercase{\Indexes}}
+\newcommand{\SomeIndex}{\MakeLowercase{\SomeIndexes}}
+\newcommand{\xOutputs}{{\left(\1+\Outputs\right)}}%{\overline{\Outputs}}
+\newcommand{\OutputSequence}{\rho}%{\{\perp\}}
+\newcommand{\OutputFunction}{\theta}%{\{\perp\}}
+\newcommand{\xOutputSequence}{\rho}%{\{\perp\}}
+\newcommand{\IMone}{\IM^{\text{\ding{172}}}}
+\newcommand{\Count}{\mathtt{count}}
+
+
+
+%TIKZ
+\usepackage{tikz}
+\usepackage{tikz-cd}
+\usetikzlibrary{arrows,automata}
+
+
+%DashedArrows
+\makeatletter
+\newcommand{\da@rightarrow}{\mathchar"0\hexnumber@\symAMSa 4B }
+\newcommand{\da@leftarrow}{\mathchar"0\hexnumber@\symAMSa 4C }
+\newcommand{\xdashedrightarrow}[2][]{%
+  \mathrel{%
+    \mathpalette{\da@xarrow{#1}{#2}{}\da@rightarrow{\,}{}}{}%
+  }%
+}
+\newcommand{\xdashedleftarrow}[2][]{%
+  \mathrel{%
+    \mathpalette{\da@xarrow{#1}{#2}\da@leftarrow{}{}{\,}}{}%
+  }%
+}
+\newcommand{\da@xarrow}[7]{%
+  % #1: below
+  % #2: above
+  % #3: arrow left
+  % #4: arrow right
+  % #5: space left 
+  % #6: space right
+  % #7: math style 
+  \sbox0{$\ifx#7\scriptstyle\scriptscriptstyle\else\scriptstyle\fi#5#1#6\m@th$}%
+  \sbox2{$\ifx#7\scriptstyle\scriptscriptstyle\else\scriptstyle\fi#5#2#6\m@th$}%
+  \sbox4{$#7\dabar@\m@th$}%
+  \dimen@=\wd0 %
+  \ifdim\wd2 >\dimen@
+    \dimen@=\wd2 %   
+  \fi
+  \count@=2 %
+  \def\da@bars{\dabar@\dabar@}%
+  \@whiledim\count@\wd4<\dimen@\do{%
+    \advance\count@\@ne
+    \expandafter\def\expandafter\da@bars\expandafter{% 
+      \da@bars
+      \dabar@ 
+    }%
+  }%  
+  \mathrel{#3}%
+  \mathrel{%   
+    \mathop{\da@bars}\limits
+    \ifx\\#1\\% 
+    \else
+      _{\copy0}%
+    \fi
+    \ifx\\#2\\%
+    \else
+      ^{\copy2}%
+    \fi
+  }%   
+  \mathrel{#4}%
+}
+
+%DoublePointed arrows
+\makeatletter
+\providecommand*{\twoheadrightarrowfill@}{%
+  \arrowfill@\relbar\relbar\twoheadrightarrow
+}
+\providecommand*{\twoheadleftarrowfill@}{%
+  \arrowfill@\twoheadleftarrow\relbar\relbar
+}
+\providecommand*{\xtwoheadrightarrow}[2][]{%
+  \ext@arrow 0579\twoheadrightarrowfill@{#1}{#2}%
+}
+\providecommand*{\xtwoheadleftarrow}[2][]{%
+  \ext@arrow 5097\twoheadleftarrowfill@{#1}{#2}%
+}
+\makeatother
 
 \newtheorem{example}{Example}[chapter]
 \newtheorem{theorem}{Theorem}[chapter]
@@ -173,7 +748,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Latent Behaviour Analysis}% and its Applications to Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Latent-Behaviour Analysis}% and its Applications to Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Dr. Sudipta \textsc{Chattopadhyay}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
@@ -331,37 +906,37 @@ Thesis Advisor\\[0.5cm]%[0.75cm]
 %----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
 %----------------------------------------------------------------------------------------
+ 
+\begin{declaration}
+\addchaptertocentry{\authorshipname}
 
-% \begin{declaration}
-% \addchaptertocentry{\authorshipname}
+\noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
 
-% \noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
-%
-% \begin{itemize}
-% \item This work was done wholly or mainly while in candidature for a research degree at this University.
-% \item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
-% \item Where I have consulted the published work of others, this is always clearly attributed.
-% \item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
-% \item I have acknowledged all main sources of help.
-% \item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
-% \end{itemize}
+\begin{itemize}
+\item This work was done wholly or mainly while in candidature for a research degree at this University.
+\item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
+\item Where I have consulted the published work of others, this is always clearly attributed.
+\item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
+\item I have acknowledged all main sources of help.
+\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
+\end{itemize}
 
-% I hereby confirm the following:
-% \begin{itemize}
-% \item I hereby confirm that the thesis work is original and has not been submitted to any other University or Institution for higher degree purposes.
-% \item I hereby grant SUTD the permission to reproduce and distribute publicly paper and electronic copies of this thesis document in whole or in part in any medium now known or hereafter created in accordance with Policy on Intellectual Property, clause 4.2.2.
-% \item I have fulfilled all requirements as prescribed by the University and provided 1 copy of my thesis in PDF.
-% \item I have attached all publications and award list related to the thesis (e.g. journal, conference report and patent).
-% \item The thesis does / does not (delete accordingly) contain patentable or confidential information.
-% \item I certify that the thesis has been checked for plagiarism via turnitin/ithenticate. The score is 100\%.
-% \end{itemize}
+I hereby confirm the following: 
+\begin{itemize}
+\item I hereby confirm that the thesis work is original and has not been submitted to any other University or Institution for higher degree purposes.
+\item I hereby grant SUTD the permission to reproduce and distribute publicly paper and electronic copies of this thesis document in whole or in part in any medium now known or hereafter created in accordance with Policy on Intellectual Property, clause 4.2.2.
+\item I have fulfilled all requirements as prescribed by the University and provided 1 copy of my thesis in PDF.
+\item I have attached all publications and award list related to the thesis (e.g. journal, conference report and patent).
+\item The thesis does / does not (delete accordingly) contain patentable or confidential information.
+\item I certify that the thesis has been checked for plagiarism via turnitin/ithenticate. The score is 100\%.
+\end{itemize}
 
-% \noindent Name and signature:\\
-% \rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
+\noindent Name and signature:\\
+\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
 
-% \noindent Date:\\
-% \rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
-% \end{declaration}
+\noindent Date:\\
+\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
+\end{declaration}
 
 % \cleardoublepage
 
@@ -471,7 +1046,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-
+ 
 \mainmatter % Begin numeric (1,2,3...) page numbering
 
 \pagestyle{thesis} % Return the page headers back to the "thesis" style
@@ -481,7 +1056,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 %\include{Chapters/Introduction}
 
-%\include{Chapters/Preliminaries}
+\include{Chapters/Preliminaries}
 \include{Chapters/LatentBehaviours}
 %\include{Chapters/QuickCompile}
 %\include{Chapters/Chapter1} 
