I feel like we are almost done with the latent behaviours chapter. I need to work on preliminaries a bit, but I should move to the next chapter soon

--- a/main.tex
+++ b/main.tex
@@ -125,7 +125,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newcommand{\DTS}{DTS}
 \newcommand{\MFunctor}{T}
 \newcommand{\TheLatentBehaviourOf}[2]{{\TheBehaviourOf{#1}^{#2}}}%{{{#1}_{beh}}}
-\newcommand{\TheLatentBehaviourOfIn}[3]{{{\llbracket#1\rrbracket}}_{({#2},{#3})}}%{{{#1}_{beh}}}
+%\newcommand{\TheLatentBehaviourOfIn}[3]{{{\llbracket#1\rrbracket}}_{({#2}}}%{{{#1}_{beh}}}
 \newcommand{\TheBehavioursOf}[1]{{{\llbracket\TheFinalCoalgebraOf{#1}\rrbracket}}}
 %\newcommand{\TheBehaviourOf}[1]{{{\llbracket#1\rrbracket}}}%{{{#1}_{beh}}}
 \newcommand{\TheBehaviourOfIn}[2]{{{\llbracket#1\rrbracket}}_{#2}}%{{{#1}_{beh}}}
