Coalgebraic Specification Languages

--- a/main.tex
+++ b/main.tex
@@ -905,7 +905,7 @@ initial text=$ $, % sets the text that appears on the start arrow
             \arrow[r,dotted, swap, "!_{b\circ c\circ m}"]
         &\sigma F 
             %\arrow[dd, "\simeq","\omega"']
-            \arrow[dd, "1"]
+            \arrow[dd, "1_F"]
             \arrow[dr, "\textbf{id}"]
         \\
         &&&\sigma(F)
@@ -918,7 +918,7 @@ initial text=$ $, % sets the text that appears on the start arrow
         &
         F(\sigma F)
             %\arrow[ur, swap, "\omega^{-1}"]
-            \arrow[ur, swap, "1^{-1}"]
+            \arrow[ur, swap, "1_F^{-1}"]
         \\
         &F(\sigma F)
             \arrow[ru, swap, "F(\omega)"]
