Jumping to the AIG chapter

--- a/main.tex
+++ b/main.tex
@@ -1045,16 +1045,27 @@ Journal Papers, Conference Presentations, etc...
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-I don't know who to thank, but I know I should thank everyone. It's the weirdest feeling in the world. Not to mention that maybe I should not specify what should I thank them for. 
+% I don't know who to thank, but I know I should thank everyone. It's the weirdest feeling in the world. Not to mention that maybe I should not specify what should I thank them for. 
 
-My family provide constant support.
-My friends keep my grip on reality.
-My advisor guides me.
-Is that how I see people? by their relationships with me and not by who they are individually? Man, I need to talk to someone... 
+%I cannot express my thanks enough to everyone who has helped me along the journey.
+Pursuing a PhD has been the most interesting adventure I've ever had. Like any interesting adventure, it has had many types of moments: emotive, dramatic, suspenseful, disheartening, and fun. I am sure this story would have not been the same had I not had the support and patience from my friends, family and advisors. 
 
-Maybe writing this helps. 
+I would first like to thank my family.
+\todo[inline]{I will continue to write this once I am a bit less emotional.}
 
-The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+Next, I would like to thank my supervisors Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've had the pleasure to work with each of you, learn from you, and experience through you the world of academia. I thank you for the time and lessons you've given me to make this journey a success. 
+
+I want to thank my friends, which I am incredibly fortunate to have in several parts of the world. Their constant support acted as a tailwind, pushing me forward closer to this achievement. 
+\todo[inline]{I will list all of them, indeed. They are important to me. }
+
+% My family provide constant support.
+% My friends keep my grip on reality.
+% My advisor guides me.
+% Is that how I see people? by their relationships with me and not by who they are individually? Man, I need to talk to someone... 
+
+% Maybe writing this helps. 
+
+%The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
 
 \end{acknowledgements}
 
@@ -1128,13 +1139,13 @@ The acknowledgments and the people to thank go here, don't forget to include you
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-\include{Chapters/Introduction}
+%\include{Chapters/Introduction}
 \include{Chapters/Preliminaries}
 \include{Chapters/LatentBehaviours}
 \include{Chapters/Classification}
-\include{Chapters/CPSRedesign}
-\include{Chapters/SideChannels} 
-\include{Chapters/Conclusion}
+%\include{Chapters/CPSRedesign}
+%\include{Chapters/SideChannels} 
+%\include{Chapters/Conclusion}
 %\include{Chapters/QuickCompile}
 %\include{Chapters/Chapter1} 
 %\include{Chapters/Chapter2}
@@ -1155,11 +1166,11 @@ The acknowledgments and the people to thank go here, don't forget to include you
 \include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
-
+ 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
-
+ 
 \printbibliography[heading=bibintoc]
 
 %----------------------------------------------------------------------------------------
