Ok, I think that now what's left is just editing classification a bit better and add a conclusion to  bring us to testing

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -2822,4 +2822,22 @@ doi="10.1007/978-3-642-81955-1_28",
 url="https://doi.org/10.1007/978-3-642-81955-1_28"
 }
 
+@InProceedings{ClassificationOfAttackers,
+author="Rothstein-Morris, Eric
+and Sun, Jun
+and Chattopadhyay, Sudipta",
+editor="Beyer, Dirk
+and Zufferey, Damien",
+title="Systematic Classification of Attackers via Bounded Model Checking",
+booktitle="Verification, Model Checking, and Abstract Interpretation",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="226--247",
+abstract="In this work, we study the problem of verification of systems in the presence of attackers using bounded model checking. Given a system and a set of security requirements, we present a methodology to generate and classify attackers, mapping them to the set of requirements that they can break. A naive approach suffers from the same shortcomings of any large model checking problem, i.e., memory shortage and exponential time. To cope with these shortcomings, we describe two sound heuristics based on cone-of-influence reduction and on learning, which we demonstrate empirically by applying our methodology to a set of hardware benchmark systems.",
+isbn="978-3-030-39322-9"
+}
+
+
+
 %%%%% END CLASSIFICATION
