--- a/main.tex
+++ b/main.tex
@@ -738,6 +738,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \makeatother
 
 \newtheorem{example}{Example}[chapter]
+\newtheorem{question}{Research Question}[chapter]
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{corollary}{Corollary}[chapter]
 %\newenvironment{haskell}[1]{\begin{minted}{haskell}#1}{\end{minted}}
@@ -1176,4 +1177,4 @@ I want to thank my friends, which I am incredibly fortunate to have in several p
 
 %----------------------------------------------------------------------------------------
 
-\end{document}
+\end{document} 
