Editing editing editing

--- a/main.tex
+++ b/main.tex
@@ -812,11 +812,11 @@ initial text=$ $, % sets the text that appears on the start arrow
 	%showframe,% show how the type block is set on the page
 }
 
-%----------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------- 
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Latent-Behaviour Analysis}% and its Applications to Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Latent Behaviour Analysis}% and its Applications to Security and Design} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Dr. Sudipta \textsc{Chattopadhyay}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
