Commit before Jorge joins

--- a/main.tex
+++ b/main.tex
@@ -961,13 +961,13 @@ Thesis Advisor\\[0.5cm]%[0.75cm]
 \begin{tec}
 \addchaptertocentry{\tecname}
 \begin{tabular}{ll}
-	TEC Chair: & Prof. XXXX \\
-	Main Advisor: & Prof. XXXX \\
-	Co-advisor(s): & Prof. XXXX (if any) \\
-	Internal TEC member 1: & Prof. XXXX \\
-	Internal TEC member 2: & Prof. XXXX \\
-	External TEC member 1: & Prof. XXXX (optional) \\
-	External TEC member 2: & Prof. XXXX (optional) \\
+	TEC Chair: & Prof. Jianying Zhou \\
+	Main Advisor: & Prof. Sudipta Chattopadhyay \\
+	%Co-advisor(s): & Prof. XXXX (if any) \\
+	Internal TEC member 1: & Prof. CHEN Binbin\\
+	Internal TEC member 2: & Prof. Cyrille Jegourel \\
+	%External TEC member 1: & Prof. XXXX (optional) \\
+	%External TEC member 2: & Prof. XXXX (optional) \\
 \end{tabular}
 \end{tec}
 \vfill\eject
@@ -1026,8 +1026,10 @@ I hereby confirm the following:
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
+Latent behaviour analysis is the study of how the behaviour of a transition system changes when its state space is transformed. A transformation of the state space can model the effects of an attack, the effects of a fault, or arbitrary interactions of the system with an external force. 
+\todo[inline]{Complete}
 
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
+% The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
 
 \end{abstract}
 
@@ -1039,6 +1041,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 \addchaptertocentry{\publicationsname} % Add the abstract to the table of contents
 
 Journal Papers, Conference Presentations, etc...
+\todo[inline]{Do we also put publications under submittion. I think I should}
 
 \end{publications}
 
@@ -1048,28 +1051,7 @@ Journal Papers, Conference Presentations, etc...
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-% I don't know who to thank, but I know I should thank everyone. It's the weirdest feeling in the world. Not to mention that maybe I should not specify what should I thank them for. 
-
-%I cannot express my thanks enough to everyone who has helped me along the journey.
-Pursuing a PhD has been the most interesting adventure I've ever had. Like any interesting adventure, it has had many types of moments: emotive, dramatic, suspenseful, disheartening, and fun. I am sure this story would have not been the same had I not had the support and patience from my friends, family and advisors. 
-
-I would first like to thank my family.
-\todo[inline]{I will continue to write this once I am a bit less emotional.}
-
-Next, I would like to thank my supervisors Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've had the pleasure to work with each of you, learn from you, and experience through you the world of academia. I thank you for the time and lessons you've given me to make this journey a success. 
-
-I want to thank my friends, which I am incredibly fortunate to have in several parts of the world. Their constant support acted as a tailwind, pushing me forward closer to this achievement. 
-\todo[inline]{I will list all of them, indeed. They are important to me. }
-
-% My family provide constant support.
-% My friends keep my grip on reality.
-% My advisor guides me.
-% Is that how I see people? by their relationships with me and not by who they are individually? Man, I need to talk to someone... 
-
-% Maybe writing this helps. 
-
-%The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
-
+\todo[inline]{I have so many people to thank...I should start writing this.}
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -1087,12 +1069,13 @@ I want to thank my friends, which I am incredibly fortunate to have in several p
 %----------------------------------------------------------------------------------------
 
 % Uncomment for abbreviations page
-% \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-%
-% \textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-% \textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
-%
-% \end{abbreviations}
+\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
+
+\textbf{AIG} & \textbf{A}nd-\textbf{I}nverter \textbf{G}raphs\\
+\textbf{COI} & \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
+\textbf{OIC} & Dual \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
+\textbf{LBA} & \textbf{L}atent \textbf{B}ehaviour \textbf{A}nalysis\\
+\end{abbreviations}
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
@@ -1129,7 +1112,7 @@ I want to thank my friends, which I am incredibly fortunate to have in several p
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{To my family and friends, those who carry fragments my soul and those whose soul fragments I also carry.}
+\dedicatory{To my family and friends. Your constant love and support made it possible.}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
@@ -1153,7 +1136,7 @@ I want to thank my friends, which I am incredibly fortunate to have in several p
 %\include{Chapters/Chapter1} 
 %\include{Chapters/Chapter2}
 %\include{Chapters/Chapter3}
-%\include{Chapters/Chapter4}
+%\include{Chapters/Chapter4} 
 %\include{Chapters/Chapter5}
 %\include{Chapters/Chapter6}
 
