Finally described the coalgebraic specification language that we needed for GKAT

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -3499,6 +3499,23 @@ location = {Dallas, Texas, USA},
 series = {CCS '17}
 }
 
+@article{GKATCoequationss,
+  author    = {Todd Schmid and
+               Tobias Kapp{\'{e}} and
+               Dexter Kozen and
+               Alexandra Silva},
+  title     = {Guarded Kleene Algebra with Tests: Coequations, Coinduction, and Completeness},
+  journal   = {CoRR},
+  volume    = {abs/2102.08286},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2102.08286},
+  archivePrefix = {arXiv},
+  eprint    = {2102.08286},
+  timestamp = {Fri, 19 Feb 2021 11:02:14 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2102-08286.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @INPROCEEDINGS{SecureCompilation,  author={Barthe, Gilles and Grégoire, Benjamin and Laporte, Vincent},  booktitle={2018 IEEE 31st Computer Security Foundations Symposium (CSF)},   title={Secure Compilation of Side-Channel Countermeasures: The Case of Cryptographic “Constant-Time”},   year={2018},  volume={},  number={},  pages={328-343},  doi={10.1109/CSF.2018.00031}}
 
 @INPROCEEDINGS{MemoryTraceOblivious,  author={Liu, Chang and Hicks, Michael and Shi, Elaine},  booktitle={2013 IEEE 26th Computer Security Foundations Symposium},   title={Memory Trace Oblivious Program Execution},   year={2013},  volume={},  number={},  pages={51-65},  doi={10.1109/CSF.2013.11}}
