--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newcommand{\Nat}[0]{\ensuremath{\mathbb{N}}}
 \newcommand{\Bool}[0]{\ensuremath{2}}%{\ensuremath{\mathbb{B}}}
 \newcommand{\letter}[0]{\ensuremath{\left(\text{A-Z\ |\ a-z}\right)}}
-\newcommand{\Atom}[0]{\ensuremath{\text{At}}}
+\newcommand{\Atom}[0]{\ensuremath{A}}%{\text{At}}}
 \newcommand{\GuardedString}[0]{\ensuremath{\text{GS}}}
 \newcommand{\RC}[0]{\ensuremath{\text{RC}}}
 \newcommand{\Low}[0]{\ensuremath{\text{Low}}}
@@ -768,6 +768,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \usepackage{todonotes} 
 \usepackage{multirow}
 \usepackage{mathrsfs}
+\usepackage{mathpartir}
 \usepackage{soul}
 \setcounter{tocdepth}{3}
 
